@@ -23,7 +23,10 @@ public:
 
 protected slots:
 	virtual void change_adaptor();
-
+	virtual void tbhpClicked();
+	virtual void heredefinitelyClicked();
+	virtual void spanClicked();
+ 
 protected:
 	virtual void closeEvent(QCloseEvent * e);
 
