@@ -1,5 +1,13 @@
 2002-09-08  John Levon  <levon@movementarian.org>
 
+	* QFloat.h:
+	* QFloat.C:
+	* QFloatDialog.h:
+	* QFloatDialog.C:
+	* ui/QFloatDialog.ui: fix bug 527 and more 
+ 
+2002-09-08  John Levon  <levon@movementarian.org>
+
 	* qfont_loader.C: fix bug 531 (emph())
  
 2002-09-08  John Levon  <levon@movementarian.org>
